# ESP32screen

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
.devcontainer/: devcontainer.json
components/BSP/: CMakeLists.txt
components/BSP/KEY/: key.c  key.h
components/BSP/LCD/: lcd.c  lcd.h  lcdfont.h  st7796.c  st7796.h
components/BSP/MYFATFS/: exfuns.c  exfuns.h
components/BSP/MYIIC/: myiic.c  myiic.h
components/BSP/MYSPI/: my_spi.c  my_spi.h
components/BSP/RTC/: esp_rtc.c  esp_rtc.h
components/BSP/SPI_SD/: spi_sd.c  spi_sd.h
components/BSP/TOUCH/: gt9xxx.c  gt9xxx.h  touch.c  touch.h
components/BSP/USART/: usart.c  usart.h
components/BSP/XL9555/: xl9555.c  xl9555.h
main/: CMakeLists.txt  idf_component.yml  main.c
main/APP/: app_brush.c  app_brush.h  app_calculator.c  app_calculator.h  app_calendar.c  app_calendar.h  app_file.c  app_file.h  app_usb.c  app_usb.h  app_wifi.c  app_wifi.h  esptim.c  esptim.h  image.c  image.h  lv_camera_ui.c  lv_camera_ui.h  lv_main_ui.h  lv_mian_ui.c  lv_photo_ui.c  lv_photo_ui.h  lv_start_ui.c  lv_start_ui.h  lv_video_ui.c  lv_video_ui.h  lvgl_demo.c  lvgl_demo.h  pc_ai_ble.c  pc_ai_ble.h  tud_sd.c  tud_sd.h  xiaoxaiole.c  xiaoxiaole.h
main/IMAGE/: FontAIStatus.c  Photo.c  Vectorback_btn.c  Vectorback_next.c  Vectorback_pro.c  app_calendar.c  brush.c  calculator.c  camera.c  cell.c  coin_img.c  esp_logo.c  esp_logo1.c  game.c  image.c  l_file.c  l_wifi.c  lv_app_usb.c  lv_tf.c  lv_usb.c  lv_video.c  music.c  novoice.c  refs_btn_img.c  usb.c  wifi0.c  wifi1.c  wifi2.c  wifi3.c
(+22 files in other folders)
